crates/fig-lexer/tests/snapshots/integration_tests__functions__definitions_pass.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: nop
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: always_true
- LParen
- RParen
- Arrow
- Bool
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: unit_work
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Pass
- Newline
- Dedent
